<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2017 Simon Marquis
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_presence"
        android:title=""
        app:showAsAction="ifRoom"
        tools:icon="@android:drawable/presence_invisible" />
    <item
        android:id="@+id/action_topics"
        android:title="@string/menu_topics"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_token"
        android:title="@string/menu_share_token"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_invalidate_token"
        android:title="@string/menu_invalidate_token"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:title="@string/menu_delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_fcm_diagnostics"
        android:title="@string/menu_fcm_diagnostics"
        app:showAsAction="never" />
</menu>
